Fix tags overflow

--- a/src/editor/frontmatter.scss
+++ b/src/editor/frontmatter.scss
@@ -43,7 +43,6 @@
 
   .metadata-property-value[data-property-type="tags"] .multi-select-container {
     padding-block: 0;
-    gap: 4px;
   }
   .multi-select-pill {
     line-height: var(--line-height-tight) !important;
